<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CadEnderecoActivity">

    <TextView
        android:id="@+id/order_textview"
        android:layout_width="wrap_content"
        android:layout_height="43dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:text="@string/endereco"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        style="@style/CampoTituloTexto"
        android:id="@+id/cep_"
        android:text="@string/cep"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/order_textview" />

    <EditText
        android:id="@+id/cep"
        style="@style/CampoEntradaTexto"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cep_" />

    <TextView
        style="@style/CampoTituloTexto"
        android:id="@+id/logradouro_"
        android:text="@string/logradouro"
        app:layout_constraintEnd_toStartOf="@+id/logradouro"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cep" />

    <EditText
        android:id="@+id/logradouro"
        style="@style/CampoEntradaTexto"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logradouro_" />

    <EditText
        android:id="@+id/numero"
        style="@style/CampoEntradaTexto"
        android:layout_width="100dp"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/num_" />

    <TextView
        style="@style/CampoTituloTexto"
        android:id="@+id/num_"
        android:text="Número:"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logradouro" />

    <EditText
        android:id="@+id/bairro"
        style="@style/CampoEntradaTexto"
        android:layout_width="250dp"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintStart_toEndOf="@+id/numero"
        app:layout_constraintTop_toBottomOf="@+id/bairro_" />

    <TextView
        style="@style/CampoTituloTexto"
        android:id="@+id/bairro_"
        android:text="@string/bairro"
        app:layout_constraintStart_toEndOf="@+id/num_"
        app:layout_constraintTop_toBottomOf="@+id/logradouro" />

    <TextView
        style="@style/CampoTituloTexto"
        android:id="@+id/complemento_"
        android:text="@string/complemento"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/numero" />

    <EditText
        android:id="@+id/complemento"
        style="@style/CampoEntradaTexto"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/complemento_" />

    <TextView
        style="@style/CampoTituloTexto"
        android:id="@+id/estado_"
        android:layout_width="30dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:text="UF"
        android:textSize="15sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/complemento" />

    <Spinner
        android:id="@+id/estado"
        android:layout_width="51dp"
        android:layout_height="33dp"
        android:layout_marginStart="12dp"
        android:layout_marginTop="12dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/estado_" />

    <TextView
        style="@style/CampoTituloTexto"
        android:id="@+id/cidade_"
        android:text="@string/cidade"
        app:layout_constraintStart_toEndOf="@+id/estado_"
        app:layout_constraintTop_toBottomOf="@+id/complemento" />

    <EditText
        android:id="@+id/cidade"
        style="@style/CampoEntradaTexto"
        android:layout_width="280dp"
        android:layout_height="41dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/estado"
        app:layout_constraintTop_toBottomOf="@+id/cidade_" />

    <Button
        android:id="@+id/cadastrarIgreja"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="36dp"
        android:onClick="concluir"
        android:text="Concluir"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cidade" />

    <Button
        android:id="@+id/voltar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="72dp"
        android:onClick="voltarInicio"
        android:text="voltar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cidade" />

</android.support.constraint.ConstraintLayout>